cmake_minimum_required(VERSION 3.22)

project(eq LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)

find_package(Curses REQUIRED)

find_package(PkgConfig REQUIRED)
pkg_check_modules(PC_PULSEAUDIO libpulse)
find_path(PULSEAUDIO_INCLUDE_DIR pulse/pulseaudio.h HINTS ${PC_PULSEAUDIO_INCLUDEDIR} ${PC_PULSEAUDIO_INCLUDE_DIRS})
find_library(PULSEAUDIO_LIBRARY NAMES pulse HINTS ${PC_PULSEAUDIO_LIBDIR} ${PC_PULSEAUDIO_LIBRARY_DIRS})
include(FindPackageHandleStandardArgs)
find_package_handle_standard_args(PulseAudio DEFAULT_MSG PULSEAUDIO_LIBRARY PULSEAUDIO_INCLUDE_DIR)
mark_as_advanced(PULSEAUDIO_INCLUDE_DIR PULSEAUDIO_LIBRARY)
set(PULSEAUDIO_INCLUDE_DIRS ${PULSEAUDIO_INCLUDE_DIR})
set(PULSEAUDIO_LIBRARIES ${PULSEAUDIO_LIBRARY})

link_directories(${NCURSES_LIBRARY_DIRS} ${PULSEAUDIO_LIBRARY_DIRS})
include_directories(${NCURSES_INCLUDE_DIRS} ${PULSEAUDIO_INCLUDE_DIRS})

set(SOURCE_FILES main.cpp)

add_executable(${PROJECT_NAME} ${SOURCE_FILES})

target_include_directories(${PROJECT_NAME} PRIVATE ${PULSEAUDIO_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} PRIVATE ${NCURSES_LIBRARIES} ${PULSEAUDIO_LIBRARIES} pulse-simple)
